# LearnOpenGL

./: CMakeLists.txt
include/glad/: glad.h
lib/glad/: CMakeLists.txt
lib/stb_image/: CMakeLists.txt
resources/shaders/: shader.frag  shader.vert
src/: CMakeLists.txt  camera.cpp  camera.hpp  glad.c  main.cpp  shader.cpp  shader.hpp
